# 3dConstruction

./: .gitignore  3weiConstruction.kdev4
.kdev4/: 3weiConstruction.kdev4
ICP/: CMakeLists.txt  ICP.kdev4  main.cpp
ICP/.kdev4/: ICP.kdev4
ICP/include/: myg2o.h
ICP/src/: bundleAdjustment.cpp  pose_estimation_3d3d.cpp
LoopDetection/LoopDetection/: CMakeLists.txt  CalculateSimilarity.cpp  LoopDetection.kdev4  main.cpp
LoopDetection/LoopDetection/.kdev4/: LoopDetection.kdev4
PoseEstimationPnP/: CMakeLists.txt  PoseEstimationPnP.kdev4  main.cpp
PoseEstimationPnP/.kdev4/: PoseEstimationPnP.kdev4
PoseEstimationPnP/src/: bundleAdjustment.cpp  find_feature.cpp
convert_to_pointcloud/: CMakeLists.txt  convert_to_pointcloud.kdev4  main.cpp
convert_to_pointcloud/.kdev4/: convert_to_pointcloud.kdev4
featureExtraction/: CMakeLists.txt  featureExtraction.kdev4  find_feature.cpp  main.cpp  pose.txt
featureExtraction/.kdev4/: featureExtraction.kdev4
imageBasics/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imageBasics  imageBasics.cpp
joinMap/: CMakeLists.txt  main.cpp
joinMap/.kdev4/: joinMap.kdev4
lib-icp/: lib-icp.rar
lib-icp/icp/: CMakeLists.txt  icp.kdev4  main.cpp
lib-icp/icp/.kdev4/: icp.kdev4
lib-icp/icp/include/: icpPointToPlane.h  icpPointToPoint.h  kdtree.h  matrix.h
lib-icp/icp/src/: icp.cpp  icpPointToPlane.cpp  icpPointToPoint.cpp  kdtree.cpp  matrix.cpp
lib-icp/lib-icp/: demo.cpp  icp.cpp  icp.h  icpPointToPlane.cpp  icpPointToPoint.cpp  kdtree.cpp  matrix.cpp  matrix.h
test/: CMakeLists.txt  main.cpp
test/.kdev4/: test.kdev4
triangulation/: CMakeLists.txt  KeyPointDepth.txt  find_feature.cpp  main.cpp  pose_estimation_2d2d.cpp  triangulation.cpp
triangulation/.kdev4/: triangulation.kdev4
vo/: CMakeLists.txt  vo.kdev4
vo/.kdev4/: vo.kdev4
vo/include/: camera.h  common_include.h  config.h
vo/src/: camera.cpp  config.cpp
